# eirbot2020-1A

./: .gitignore  .travis.yml  CONTRIBUTING.md  Doxyfile  Makefile  README.md  _asserv_2detection__nucleo_8hpp_source.html  _detect___ar_uco_8py.html  _detection_2detection__nucleo_8hpp_source.html  _protocole_8hpp_source.html  _protocole__nucleo_8hpp.html  _protocole__nucleo_8hpp.js  _protocole__nucleo_8hpp__incl.map  _protocole__nucleo_8hpp__incl.md5  _protocole__nucleo_8hpp_source.html  actionneur_8hpp.html  actionneur_8hpp.js  actionneur_8hpp__dep__incl.map  actionneur_8hpp__incl.map  actionneur_8hpp__incl.md5  actionneur_8hpp_a67dc27880f7a17b2b88fe1a8072e2422_cgraph.map  actionneur_8hpp_a67dc27880f7a17b2b88fe1a8072e2422_cgraph.md5  actionneur_8hpp_a67dc27880f7a17b2b88fe1a8072e2422_icgraph.map  actionneur_8hpp_a67dc27880f7a17b2b88fe1a8072e2422_icgraph.md5  actionneur_8hpp_a6a9127b917614ef9786cf08fe60bc100_cgraph.map  actionneur_8hpp_a6a9127b917614ef9786cf08fe60bc100_cgraph.md5  actionneur_8hpp_a6a9127b917614ef9786cf08fe60bc100_icgraph.map  actionneur_8hpp_a6a9127b917614ef9786cf08fe60bc100_icgraph.md5  actionneur_8hpp_aa0ba6f7540ba92cbae67baf2391195d1_cgraph.map  actionneur_8hpp_aa0ba6f7540ba92cbae67baf2391195d1_icgraph.map  actionneur_8hpp_aae672dba7511eaf30098642047d5e669_cgraph.map  actionneur_8hpp_aae672dba7511eaf30098642047d5e669_cgraph.md5  actionneur_8hpp_aae672dba7511eaf30098642047d5e669_icgraph.map  actionneur_8hpp_aae672dba7511eaf30098642047d5e669_icgraph.md5  actionneur_8hpp_ab23d015719e1a7bf79342aecb134e6d7_cgraph.map  actionneur_8hpp_ab23d015719e1a7bf79342aecb134e6d7_icgraph.map  actionneur_8hpp_afb8152505a10acfae01d8e86dada177e_cgraph.map  actionneur_8hpp_afb8152505a10acfae01d8e86dada177e_cgraph.md5  actionneur_8hpp_afe1845d64ec4917974b908eedc519411_cgraph.map  actionneur_8hpp_source.html  (+347 more)
code/: CMakeLists.txt  Makefile  Makefile_old  README.md  test_astar.ppm  toolchain.cmake
code/balise/: Detect_ArUco.py
code/balise/Nano_Balise/: Nano_Balise.ino
code/doc/: Doxyfile.in
code/gp2_test/: platformio.ini
code/gp2_test/src/: main.cpp
code/nucleo/: platformio.ini
code/nucleo/lib/Actionneur/: actionneur.cpp  actionneur.hpp  actionneur_nucleo.cpp  actionneur_nucleo.hpp
code/nucleo/lib/Asserv/: asserv.cpp  asserv.hpp  asserv_vitesse_angle.cpp  asserv_vitesse_angle.hpp  detection_nucleo.hpp  encoder.cpp  moteur.cpp  moteur.hpp
code/nucleo/lib/Detection/: detection_nucleo.cpp  detection_nucleo.hpp
code/nucleo/lib/Protocole/: Protocole.cpp  (+3 more)
code/nucleo/src/: actionneur.hpp  asserv.cpp  asserv.hpp  asserv_vitesse_angle.cpp  asserv_vitesse_angle.hpp  encoder.hpp  main.cpp  main_asserv.cpp  moteur.hpp  pinout.hpp  strategie_secours.hpp
code/phare/PhareEirboat/: PhareEirboat.ino
code/phare/Receive433/: Receive433.ino
code/phare/Recepteur_RF/: Recepteur_RF.ino
code/phare/Send433/: Send433.ino
code/phare/Test1Depli/: Test1Depli.ino
code/phare/TestServo/: TestServo.ino
code/phare/potarLecture/: potarLecture.ino
code/protocole_test/: .ccls
code/protocole_test/src/: Protocole.hpp  main.cpp  main.cpp.old
code/pyrasp/: .gitignore  DummyCommunication.py  main.py  requirements.txt
code/rasp/src/: actionneur.hpp  affichage.cpp  affichage.hpp  asserv.cpp  asserv.hpp  detection.cpp  detection.hpp  main.cpp  main.hpp  navigation.cpp  navigation.hpp  protocole.cpp  protocole.hpp  robot.cpp  robot.hpp  world.cpp  world.hpp
code/rasp/tst/: test.cpp  test.hpp  test_actionneur.cpp  test_actionneur.hpp  test_asserv.cpp  test_asserv.hpp  test_detection.cpp  test_detection.hpp  test_ecocup.cpp  test_ecocup.hpp  test_lowlevel.cpp  test_lowlevel.hpp  test_navigation.cpp  test_navigation.hpp  test_protocole.cpp  test_protocole.hpp  test_robot.cpp  test_robot.hpp
code/src/: actionneur.hpp  asserv.cpp  asserv.hpp  main.cpp  main.hpp  navigation.cpp  navigation.h  navigation.hpp  world.cpp  world.hpp
code/tst/: test.cpp  test.hpp
(+662 files in other folders)
